--- a/EFCore.Scaffolding.Extension/EFCore.Scaffolding.Extension.csproj
+++ b/EFCore.Scaffolding.Extension/EFCore.Scaffolding.Extension.csproj
@@ -4,6 +4,7 @@
     <OutputType>Library</OutputType>
     <TargetFramework>netcoreapp2.2</TargetFramework>
     <StartupObject></StartupObject>
+    <LangVersion>7.3</LangVersion>
     <ApplicationIcon />
   </PropertyGroup>
 
