--- a/EFCore.Scaffolding.Extension/.editorconfig
+++ b/EFCore.Scaffolding.Extension/.editorconfig
@@ -59,3 +59,6 @@ dotnet_diagnostic.CA1819.severity = none
 
 # CA1062: 验证公共方法的参数
 dotnet_diagnostic.CA1062.severity = none
+
+# SA1201: Elements should appear in the correct order
+dotnet_diagnostic.SA1201.severity = none
