--- a/EFCore.Scaffolding.Extension.Test/.editorconfig
+++ b/EFCore.Scaffolding.Extension.Test/.editorconfig
@@ -14,3 +14,6 @@ dotnet_diagnostic.CA1304.severity = suggestion
 
 # SA1633: File should have header
 dotnet_diagnostic.SA1633.severity = none
+
+# CA1303: 请不要将文本作为本地化参数传递
+dotnet_diagnostic.CA1303.severity = none
