--- a/EFCore.Scaffolding.Extension.Test/EFCore.Scaffolding.Extension.Test.csproj
+++ b/EFCore.Scaffolding.Extension.Test/EFCore.Scaffolding.Extension.Test.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Dapper.Contrib" Version="2.0.4" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Analyzers" Version="3.0.0-preview3-19153-02" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.9.5-beta1.final">
       <PrivateAssets>all</PrivateAssets>
