--- a/EFCore.Scaffolding.Extension/EFCore.Scaffolding.Extension.csproj
+++ b/EFCore.Scaffolding.Extension/EFCore.Scaffolding.Extension.csproj
@@ -7,7 +7,9 @@
     <LangVersion>7.3</LangVersion>
     <ApplicationIcon />
   </PropertyGroup>
-
+  <ItemGroup>
+    <Compile Include="..\Shared\*.cs" />
+  </ItemGroup>
   <ItemGroup>
     <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Analyzers" Version="3.0.0-preview3-19153-02" />
