--- a/EFCore.Scaffolding.Extension/.editorconfig
+++ b/EFCore.Scaffolding.Extension/.editorconfig
@@ -2,3 +2,6 @@
 
 # SA1633: File should have header
 dotnet_diagnostic.SA1633.severity = none
+
+# SA1200: Using directives should be placed correctly
+dotnet_diagnostic.SA1200.severity = none
