--- a/EFCore.Scaffolding.Extension.Entity/.editorconfig
+++ b/EFCore.Scaffolding.Extension.Entity/.editorconfig
@@ -1,40 +1,16 @@
 ﻿[*.cs]
 
+# CA1819: 属性不应返回数组
+dotnet_diagnostic.CA1819.severity = none
+
 # SA1600: Elements should be documented
 dotnet_diagnostic.SA1600.severity = none
-
-# CA2227: 集合属性应为只读
-dotnet_diagnostic.CA2227.severity = none
-
-# SA1623: Property summary documentation should match accessors
-dotnet_diagnostic.SA1623.severity = none
-
-# SA1200: Using directives should be placed correctly
-dotnet_diagnostic.SA1200.severity = none
-
-# SA1601: Partial elements should be documented
-dotnet_diagnostic.SA1601.severity = none
-
-# SA1649: File name should match first type name
-dotnet_diagnostic.SA1649.severity = none
-
-# SA1633: File should have header
-dotnet_diagnostic.SA1633.severity = none
-
-# CA1062: 验证公共方法的参数
-dotnet_diagnostic.CA1062.severity = none
-
-# CA1716: 标识符不应与关键字匹配
-dotnet_diagnostic.CA1716.severity = none
-
-# IDE0022: 使用方法的程序块主体
-csharp_style_expression_bodied_methods = false:silent
-
-# CA1720: 标识符包含类型名称
-dotnet_diagnostic.CA1720.severity = none
 
 # CA1303: 请不要将文本作为本地化参数传递
 dotnet_diagnostic.CA1303.severity = none
 
-# CA1307: 指定 StringComparison
-dotnet_diagnostic.CA1307.severity = none
+# CA1062: 验证公共方法的参数
+dotnet_diagnostic.CA1062.severity = none
+
+# CA1720: 标识符包含类型名称
+dotnet_diagnostic.CA1720.severity = none
