--- a/EFCore.Scaffolding.Extension.Test/EFCore.Scaffolding.Extension.Test.csproj
+++ b/EFCore.Scaffolding.Extension.Test/EFCore.Scaffolding.Extension.Test.csproj
@@ -34,6 +34,8 @@
     </PackageReference>
     <PackageReference Include="WeCantSpell.Hunspell" Version="3.0.1" />
     <PackageReference Include="xunit" Version="2.4.0" />
+    <PackageReference Include="xunit.core" Version="2.4.1" />
+    <PackageReference Include="Xunit.Extensions.Ordering" Version="1.4.5" />
     <PackageReference Include="xunit.runner.visualstudio" Version="2.4.0" />
   </ItemGroup>
 
