--- a/EFCore.Scaffolding.Extension.Entity/.editorconfig
+++ b/EFCore.Scaffolding.Extension.Entity/.editorconfig
@@ -2,3 +2,15 @@
 
 # SA1600: Elements should be documented
 dotnet_diagnostic.SA1600.severity = none
+
+# CA1720: 标识符包含类型名称
+dotnet_diagnostic.CA1720.severity = none
+
+# CA1062: 验证公共方法的参数
+dotnet_diagnostic.CA1062.severity = none
+
+# CA1303: 请不要将文本作为本地化参数传递
+dotnet_diagnostic.CA1303.severity = none
+
+# SA1311: Static readonly fields should begin with upper-case letter
+dotnet_diagnostic.SA1311.severity = none
