--- a/EFCore.Scaffolding.Extension.Entity/.editorconfig
+++ b/EFCore.Scaffolding.Extension.Entity/.editorconfig
@@ -17,3 +17,9 @@ dotnet_diagnostic.SA1311.severity = none
 
 # CA1720: 标识符包含类型名称
 dotnet_diagnostic.CA1720.severity = none
+
+# CA1810: 以内联方式初始化引用类型的静态字段
+dotnet_diagnostic.CA1810.severity = none
+
+# CA5369: 将 XmlReader 用于反序列化
+dotnet_diagnostic.CA5369.severity = none
