--- a/EFCore.Scaffolding.Extension.Entity/EFCore.Scaffolding.Extension.Entity.csproj
+++ b/EFCore.Scaffolding.Extension.Entity/EFCore.Scaffolding.Extension.Entity.csproj
@@ -8,6 +8,7 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Dapper" Version="2.0.30" />
+    <PackageReference Include="JetBrains.Annotations" Version="2019.1.3" />
     <PackageReference Include="Microsoft.AspNetCore.Mvc.Analyzers" Version="3.0.0-preview3-19153-02" />
     <PackageReference Include="Microsoft.CodeAnalysis.Analyzers" Version="2.9.5-beta1.final">
       <PrivateAssets>all</PrivateAssets>
