--- a/EFCore.Scaffolding.Extension/EFCore.Scaffolding.Extension.csproj
+++ b/EFCore.Scaffolding.Extension/EFCore.Scaffolding.Extension.csproj
@@ -40,6 +40,7 @@
     </PackageReference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Update="..\Shared\Class.cs" Link="Shared\Class.cs" />
     <Compile Update="..\Shared\Connection.cs" Link="Shared\Connection.cs" />
     <Compile Update="..\Shared\Entity.cs" Link="Shared\Entity.cs" />
     <Compile Update="..\Shared\Namespace.cs" Link="Shared\Namespace.cs" />
