Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -54,7 +54,13 @@ steps:
     testRunTitle: '单元测试并代码生成'
     workingDirectory: 'd:/a/1/s/temp'
 
+- task: DotNetCoreCLI@2
+  inputs:
+    command: 'build'
+    workingDirectory: 'd:/a/1/s/temp'
+
 - task: BuildQualityChecks@6
+  displayName: Build Quality Checks
   inputs:
     checkWarnings: true
     warningFailOption: 'build'
