--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,10 +53,6 @@ steps:
     msbuildArchitecture: 'x64'
     createLogFile: true
 
-- task: NDependTask@1
-  inputs:
-    iscoverage: true
-
 - task: DotNetCoreCLI@2
   displayName: dotnet test & code generator
   inputs:
@@ -64,11 +60,25 @@ steps:
     testRunTitle: '单元测试并代码生成'
     workingDirectory: 'd:/a/1/s/temp'
 
-- task: BuildQualityChecks@6
-  displayName: Build Quality Checks
+- task: mspremier.BuildQualityChecks.QualityChecks-task.BuildQualityChecks@5
+  displayName: 'Check build quality'
   inputs:
     checkWarnings: true
-    warningFailOption: 'build'
+    warningFailOption: fixed
+    warningFilters: |
+     /\[warning\]/i
+     /\[super\]/i
+    showStatistics: true
+    checkCoverage: true
+    coverageFailOption: fixed
+    coverageType: branches
+    buildConfiguration: '$(BuildConfiguration)'
+    buildPlatform: '$(BuildPlatform)'
+    explicitFilter: true
+    baseDefinitionId: 33
+    baseRepoId: '21e399f7-aba6-4c72-a5f5-2bcc7b38a0cf'
+    baseBranchRef: refs/heads/master
+    runTitle: 'Run Title'
 
 - task: CmdLine@2
   displayName: debug cmd dir
