Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -60,6 +60,16 @@ steps:
     testRunTitle: '单元测试并代码生成'
     workingDirectory: 'd:/a/1/s/temp'
 
+- task: BuildQualityChecks@6
+  inputs:
+    checkWarnings: true
+    warningFailOption: 'fixed'
+    warningThreshold: '0'
+    warningFilters: |
+      /\[warning\]/i
+      /\[super\]/i
+    showStatistics: true
+
 - task: CmdLine@2
   displayName: debug cmd dir
   inputs:
