--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -65,10 +65,13 @@ steps:
     checkWarnings: true
     warningFailOption: 'fixed'
     warningThreshold: '0'
-    warningFilters: |
-      /\[warning\]/i
-      /\[super\]/i
     showStatistics: true
+    checkCoverage: true
+    coverageFailOption: 'build'
+    coverageType: 'blocks'
+    buildConfiguration: '$(BuildConfiguration)'
+    buildPlatform: '$(BuildPlatform)'
+    runTitle: '代码质量检测'
 
 - task: CmdLine@2
   displayName: debug cmd dir
