Test get OneToMany navigate entity without PK

--- a/EFCore.Scaffolding.Extension.Entity/.editorconfig
+++ b/EFCore.Scaffolding.Extension.Entity/.editorconfig
@@ -26,3 +26,6 @@ dotnet_diagnostic.CA5369.severity = none
 
 # SA1201: Elements should appear in the correct order
 dotnet_diagnostic.SA1201.severity = none
+
+# SA1200: Using directives should be placed correctly
+dotnet_diagnostic.SA1200.severity = none
