--- a/EFCore.CodeGenerator/.editorconfig
+++ b/EFCore.CodeGenerator/.editorconfig
@@ -11,3 +11,6 @@ dotnet_diagnostic.SA1200.severity = none
 
 # SA1202: Elements should be ordered by access
 dotnet_diagnostic.SA1202.severity = none
+
+# SA1633: File should have header
+dotnet_diagnostic.SA1633.severity = none
